--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ section {
     transition: all 300ms ease;
     padding: 2rem;
     width: 18rem;
-    border-radius: 2rem;
+    border-radius: 3rem;
     color: white; 
     border: black 0.1rem solid;
     background-color: grey;
@@ -285,3 +285,27 @@ section {
     color: grey;
     background-color: white;
 }
+
+/*Skills Section*/
+
+#skills {
+    text-align: center;
+}
+
+.skill-title {
+    text-align: left;
+    font-size: 5rem;
+    padding: 20px;
+}
+
+.skill-set-container {
+    display: flex;
+    justify-content: space-around; 
+}
+  
+.skill-container {
+    width: 30%; 
+    margin: 10px;
+    padding: 15px;    
+}
+  
