--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
-
 * {
     margin: 0;
     padding: 0;
@@ -212,6 +211,25 @@ section {
     font-family: "Open Sans", sans-serif;
 }
 
+.section-title {
+    font-size: 5rem;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+/*AboutMe Section*/
+
+#AboutMe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15rem;
+    height: 300px;    
+    width: auto;
+    margin-left: 0;
+    margin-right: 0; 
+}
+
 .section-text-3 {
     font-size: 2rem;
     margin-bottom: 1.5rem;
@@ -221,20 +239,15 @@ section {
     font-family: "Open Sans", sans-serif;
 }
 
-.section-title {
-    font-size: 5rem;
-    text-align: left;
-    margin-bottom: 1rem;
-}
-
 /*Contact Section*/
 
 #contact {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 29rem;
-    height: 500px;    
+    gap: 15rem;
+    padding-bottom: 6%;
+    height: 400px;    
     width: auto;
     margin-left: 0;
     margin-right: 0;
@@ -299,10 +312,10 @@ section {
 }
 
 .skill-title {
-    margin-left: 16rem;
+    margin-top: 3rem;
+    margin-left: 6rem;
     text-align: left;
     font-size: 5rem;
-    padding: 20px;
 }
 
 .skill-set-container {
@@ -319,6 +332,74 @@ section {
     border: black 0.1rem solid;
     border-color: black;
     text-align: center;
-
 }
   
+/*Project Section*/
+
+#projects {
+    width: auto;
+    height: 500px;
+    margin-top: 55px;
+    margin-left: 0;
+    margin-right: 0;
+    text-align: center;
+}
+
+.project-title {
+    margin-top: 3rem;
+    margin-right: 6rem;
+    text-align: right;
+    font-size: 5rem;    
+}
+
+.project-set-container {
+    display: flex;
+    justify-content: center;
+}
+
+.project-container {
+    margin: 10px;
+    padding: 20px;
+    width: 390px;
+    background: grey;
+    border-radius: 2rem;
+    border: black 0.1rem solid;
+    border-color: black;
+    text-align: center;     
+}
+
+/*Achievements Section*/
+
+#achievement {
+    width: auto;
+    height: 500px;
+    margin-top: 55px;
+    margin-left: 0;
+    margin-right: 0;
+    text-align: center;
+    background-color: grey;
+}
+
+.achievement-title {
+    margin-top: 3rem;
+    text-align: center;
+    font-size: 5rem;
+}
+
+.achievement-set-container {
+    display: flex;
+    justify-content: center;
+}
+
+.achievement-container {
+    margin: 10px;
+    padding: 20px;
+    width: 390px;   
+    background: white; 
+    border-radius: 2rem;
+    border: black 0.1rem solid;
+    border-color: black;
+    text-align: center; 
+}
+
+
