--- a/style.css
+++ b/style.css
@@ -16,10 +16,6 @@ html {
     scroll-behavior: smooth;
 }
 
-p {
-    color: black;
-}
-
 /*Transition*/
 
 a, 
@@ -28,6 +24,9 @@ a,
 }
 
 /*Navigation*/
+body {
+    background-color: rgb(9, 38, 53)
+}
 
 nav, 
 .nav-links {
@@ -60,10 +59,6 @@ a:hover {
 .logo {
     font-size: 3rem;
     font-weight: bold;
-}
-
-.logo:hover {
-    cursor: default;
 }
 
 /*Menu*/
@@ -171,7 +166,7 @@ section {
     margin-top: 55px;
     margin-left: 0;
     margin-right: 0;
-    background-color: grey;
+    background-color: rgb(27, 66, 66)
 }
 
 .rounded-image {
@@ -207,7 +202,7 @@ section {
 }
 
 .section-text-2 {
-    margin-bottom: 5rem;
+    margin-bottom: 1.5rem;
     font-family: "Open Sans", sans-serif;
 }
 
@@ -215,6 +210,15 @@ section {
     font-size: 5rem;
     text-align: left;
     margin-bottom: 1rem;
+}
+
+.contact-button {
+    padding: 20px 60px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 1rem;
+    cursor: pointer;
 }
 
 /*AboutMe Section*/
@@ -237,6 +241,7 @@ section {
 
 .section-text-4 {
     font-family: "Open Sans", sans-serif;
+    font-weight: 600;
 }
 
 /*Contact Section*/
@@ -246,7 +251,6 @@ section {
     justify-content: center;
     align-items: center;
     gap: 15rem;
-    padding-bottom: 6%;
     height: 400px;    
     width: auto;
     margin-left: 0;
@@ -256,14 +260,15 @@ section {
 .contact-text {
     align-self: center;
     text-align: center;
-    font-size: 4rem;
+    font-size: 1.5rem;    
 }
 
 .icon-git,
 .icon-email {
+    margin-top: 20px;
     animation: float 2000ms ease-in-out infinite;
-    height: 110px;
-    width: 110px;
+    height: 90px;
+    width: 90px;
 }
 
 @keyframes float {
@@ -308,14 +313,14 @@ section {
     margin-left: 0;
     margin-right: 0;
     text-align: center;
-    background-color: grey;
+    background-color: rgb(27, 66, 66)
 }
 
 .skill-title {
     margin-top: 3rem;
-    margin-left: 6rem;
+    margin-left: 16rem;
     text-align: left;
-    font-size: 5rem;
+    font-size: 2rem;
 }
 
 .skill-set-container {
@@ -347,9 +352,9 @@ section {
 
 .project-title {
     margin-top: 3rem;
-    margin-right: 6rem;
+    margin-right: 16rem;
     text-align: right;
-    font-size: 5rem;    
+    font-size: 2rem;    
 }
 
 .project-set-container {
@@ -377,13 +382,14 @@ section {
     margin-left: 0;
     margin-right: 0;
     text-align: center;
-    background-color: grey;
+    background-color: rgb(27, 66, 66)
 }
 
 .achievement-title {
     margin-top: 3rem;
-    text-align: center;
-    font-size: 5rem;
+    margin-left: 16rem;
+    text-align: left;
+    font-size: 2rem;
 }
 
 .achievement-set-container {
@@ -394,8 +400,8 @@ section {
 .achievement-container {
     margin: 10px;
     padding: 20px;
-    width: 390px;   
-    background: white; 
+    width: 390px;
+    background: white;
     border-radius: 2rem;
     border: black 0.1rem solid;
     border-color: black;
