--- a/mediaquiries.css
+++ b/mediaquiries.css
@@ -59,13 +59,14 @@
     .rounded-image {
         width: 300px;
         height: 420px;
-        margin-left: 29.2rem;
-        margin-bottom: 6rem;
+        margin: 0 auto 6rem;
+        display: block
     }
 
     .section-text-1 {
         text-align: center;
     }
+    
     .contact-button {
         padding: 15px 40px;
     }
@@ -84,7 +85,6 @@
     }
 
     .git-button, .email-button {
-        width: 300px;
-        height: 90px;
+        padding: 25px 40px;
     }
 }
