--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ html {
     scroll-behavior: smooth;
 }
 
+p, h1 {
+    color: white;
+}
 /*Transition*/
 
 a, 
@@ -25,7 +28,7 @@ a,
 
 /*Navigation*/
 body {
-    background-color: rgb(9, 38, 53)
+    background-color: #1B4242;
 }
 
 nav, 
@@ -46,7 +49,7 @@ nav {
 }
 
 a {
-    color: black;
+    color: white;
     text-decoration: none;
     text-decoration-color: white;
 }
@@ -59,6 +62,7 @@ a:hover {
 .logo {
     font-size: 3rem;
     font-weight: bold;
+    color: white;
 }
 
 /*Menu*/
@@ -84,7 +88,7 @@ a:hover {
 .menu-icon span {
     width: 100%;
     height: 2px;
-    background-color: black;
+    background-color: white;
     transition: all 0.3 ease-in-out;
 }
 
@@ -92,11 +96,13 @@ a:hover {
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: white;
+    background-color: #9EC8B9;
     width: fit-content;
     max-height: 0;
+    border-radius: 20px;
     overflow: hidden;
     transition: all 0.3 ease-in-out;
+    margin-top: 10px;
 }
   
 .menu-links a {
@@ -104,7 +110,7 @@ a:hover {
     padding: 10px;
     text-align: center;
     font-size: 1.5rem;
-    color: black;
+    color: white;
     text-decoration: none;
     transition: all 0.3 ease-in-out;
 }
@@ -166,7 +172,7 @@ section {
     margin-top: 55px;
     margin-left: 0;
     margin-right: 0;
-    background-color: rgb(27, 66, 66)
+    background-color: #5C8374;
 }
 
 .rounded-image {
@@ -213,6 +219,7 @@ section {
 }
 
 .contact-button {
+    font-weight: 600    ;
     padding: 20px 60px;
     background-color: #4CAF50;
     color: white;
@@ -288,13 +295,14 @@ section {
     font-weight: 600;
     font-size: 1.5rem;
     transition: all 300ms ease;
-    padding: 2rem;
+    padding: 1.5rem;
     width: 18rem;
-    border-radius: 3rem;
+    border-radius: 1rem;
     color: white; 
-    border: black 0.1rem solid;
-    background-color: grey;
     margin-left: 10px;
+    background-color: #4CAF50;
+    border: none;
+    cursor: pointer;
 }
 
 .git-button:hover, 
@@ -313,7 +321,7 @@ section {
     margin-left: 0;
     margin-right: 0;
     text-align: center;
-    background-color: rgb(27, 66, 66)
+    background-color: #5C8374;
 }
 
 .skill-title {
@@ -332,10 +340,8 @@ section {
     margin: 10px;
     padding: 20px;
     width: 390px;
-    background: white;
+    background: #1B4242;
     border-radius: 2rem;
-    border: black 0.1rem solid;
-    border-color: black;
     text-align: center;
 }
   
@@ -366,10 +372,8 @@ section {
     margin: 10px;
     padding: 20px;
     width: 390px;
-    background: grey;
+    background: #5C8374;
     border-radius: 2rem;
-    border: black 0.1rem solid;
-    border-color: black;
     text-align: center;     
 }
 
@@ -382,7 +386,7 @@ section {
     margin-left: 0;
     margin-right: 0;
     text-align: center;
-    background-color: rgb(27, 66, 66)
+    background-color: #5C8374;
 }
 
 .achievement-title {
@@ -401,10 +405,8 @@ section {
     margin: 10px;
     padding: 20px;
     width: 390px;
-    background: white;
+    background: #1B4242;
     border-radius: 2rem;
-    border: black 0.1rem solid;
-    border-color: black;
     text-align: center; 
 }
 
