--- a/style.css
+++ b/style.css
@@ -234,13 +234,20 @@ section {
 }
 
 .contact-button {
-    font-weight: 600    ;
+    font-weight: 700;
     padding: 20px 60px;
     background-color: #4CAF50;
+    transition: all 300ms ease;
     color: white;
     border: none;
     border-radius: 1rem;
     cursor: pointer;
+}
+
+.contact-button:hover {
+    cursor: pointer;
+    color: #4CAF50;
+    background-color: white;
 }
 
 /*AboutMe Section*/
@@ -328,7 +335,7 @@ section {
 .git-button:hover,
 .email-button:hover {
     cursor: pointer;
-    color: grey;
+    color: #4CAF50;
     background-color: white;
 }
 
@@ -367,6 +374,13 @@ section {
     background: #1B4242;
     border-radius: 2rem;
     text-align: center;
+    transition: transform 1000ms ease-in-out;
+}
+
+.skill-container:hover {
+    background-color: #092635;
+    transform: translatey(-15px);
+    box-shadow: 0px 5px 7px 1px rgba(0, 0, 0, 0.2);
 }
   
 /*Project Section*/
@@ -398,7 +412,14 @@ section {
     width: 390px;
     background: #5C8374;
     border-radius: 2rem;
-    text-align: center;     
+    text-align: center;
+    transition: transform 1000ms ease-in-out;     
+}
+
+.project-container:hover {
+    background-color: #092635;
+    transform: translatey(-15px);
+    box-shadow: 0px 5px 7px 1px rgba(0, 0, 0, 0.2);
 }
 
 /*Achievements Section*/
@@ -432,6 +453,12 @@ section {
     background: #1B4242;
     border-radius: 2rem;
     text-align: center; 
+    transition: transform 1000ms ease-in-out;     
 }
 
+.achievement-container:hover {
+    background-color: #092635;
+    transform: translatey(-15px);
+    box-shadow: 0px 5px 7px 1px rgba(0, 0, 0, 0.2);
+}
 
