--- a/mediaquiries.css
+++ b/mediaquiries.css
@@ -114,13 +114,13 @@
         padding: 10px;
     }
 
-    #profile {
-        background-size: contain;
-    }
-
     .nav-links {
         gap: 1rem;
     }
+
+    #profile {
+        background-size: contain;
+    }    
 
     .logo {
         font-size: 1.5rem; 
@@ -213,27 +213,28 @@
         display: flex;
     }
 
+    body {
+        font-size: 14px;
+    }
+
     nav {
+        margin-top: 1rem;
         height: auto;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 0;
+        align-items: flex-start;
+        padding: 10px;
     }
 
     .nav-links {
-        flex-direction: column;
-        gap: 0.5rem;
-        margin-top: 1rem;
-        text-align: center;
+        gap: 1rem;
     }
 
     .logo {
         font-size: 0.7rem;
-        margin-bottom: 0.5rem;
     }
 
     .arrow-image {
-        height: 12px;
+        height: 10px;
+        width: 14px;
     }
 
     #mobile-nav {
