--- a/mediaquiries.css
+++ b/mediaquiries.css
@@ -161,7 +161,7 @@
 
     .rounded-image {
         width: 250px; 
-        height: 300px; 
+        height: 350px; 
         margin: 0 auto 4rem;
         display: block;
     }
@@ -186,6 +186,13 @@
     .project-container,
     .achievement-container {
         width: 100%;
+        transition: transform 0.3s;
+    }
+
+    .skill-container:hover,
+    .achievement-container:hover,
+    .project-container:hover {
+        transform: scale(1);
     }
 
     .git-button,
@@ -326,7 +333,7 @@
     .skill-container:hover,
     .achievement-container:hover,
     .project-container:hover {
-        transform: scale(2);
+        transform: scale(1.5);
     }
 
     .project-set-container,
