--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@ body {
     font-family: "Poppins", sans-serif;
 }
 
+.bg-clip {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    transform: scale(1);
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -26,11 +34,16 @@ a,
     transition: all 300ms ease;
 }
 
-/*Navigation*/
-
-body {
-    background-color: #1B4242;
+.hidden {
+    opacity: 0;
+    transition: all 1s;
 }
+
+.show {
+    opacity: 1;
+}
+
+/*Navigation*/
 
 nav, 
 .nav-links {
@@ -49,9 +62,14 @@ nav,
 }
 
 nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
     justify-content: space-around;
     align-items: center;
     height: 15vh;
+    background-color: #111111;
 }
 
 .nav-links {
@@ -109,7 +127,7 @@ a:hover {
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: #9EC8B9;
+    background-color: #424242;
     width: fit-content;
     max-height: 0;
     border-radius: 20px;
@@ -180,20 +198,52 @@ section {
     display: flex;
     justify-content: center;
     gap: 29rem;
-    height: 750px;    
+    height: 850px;    
     width: auto;
-    margin-top: 55px;
+    margin-top: 110px;
     margin-left: 0;
     margin-right: 0;
     background-image: url('./assets/Design.png');
     background-repeat: no-repeat; 
     background-position: center;
-    background-color: #5C8374;
+    background-color: #202020;
+}
+
+.rounded-image-container {
+    overflow: hidden;
+    margin-top: 5rem;
+    position: relative;
 }
 
 .rounded-image {
     border-radius: 20px;
-    margin-top: 5rem;
+    margin-top: 3rem;
+}
+
+.video-overlay {
+    margin-top: 3rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 500px;
+    pointer-events: none;
+    opacity: 1;
+    transition: opacity 1000ms ease-in-out;
+}
+
+.image-display {
+    border-radius: 20px;
+    width: 100%;
+    height: 550px;
+    object-fit: cover;  
+    opacity: 1;
+    transition: opacity 1000ms ease-in-out;  
+}
+
+.rounded-image-container:hover .video-overlay,
+.rounded-image-container:hover .image-display {
+    opacity: 0;
 }
 
 .section-pic-continer {
@@ -219,7 +269,7 @@ section {
 .section-text-1 {
     font-size: 2rem;
     margin-bottom: 3rem;
-    margin-top: 5rem;
+    margin-top: 12rem;
 }
 
 .section-text-2 {
@@ -297,26 +347,6 @@ section {
     align-items: center;
 }
 
-.icon-git,
-.icon-email {
-    margin-top: 20px;
-    animation: float 2000ms ease-in-out infinite;
-    height: 90px;
-    width: 90px;
-}
-
-@keyframes float {
-    0% {
-        transform: translateY(0px);
-    }
-    50% {
-        transform: translateY(-20px);
-    }
-    100% {
-        transform: translateY(0px);
-    }
-}
-
 .git-button,
 .email-button {
     font-weight: 600;
@@ -330,33 +360,42 @@ section {
     background-color: #4CAF50;
     border: none;
     cursor: pointer;
+    position: relative;
 }
 
 .git-button:hover,
 .email-button:hover {
     cursor: pointer;
     color: #4CAF50;
-    background-color: white;
+    background-color: white;    
 }
+
 
 .git-button {
     margin-right: 4rem;
+}
+
+.icon-git,
+.icon-email {
+    margin-top: 20px;    
+    height: 90px;
+    width: 90px;
 }
 
 /*Skills Section*/
 
 #skills {
     width: auto;    
-    height: 500px;
+    height: 700px;
     margin-top: 55px;
     margin-left: 0;
     margin-right: 0;
     text-align: center;
-    background-color: #5C8374;
+    background-color: rgba(32, 32, 32, 0.3);
 }
 
 .skill-title {
-    margin-top: 3rem;
+    margin-top: 10rem;
     margin-left: 16rem;
     text-align: left;
     font-size: 2rem;
@@ -371,7 +410,7 @@ section {
     margin: 10px;
     padding: 20px;
     width: 390px;
-    background: #1B4242;
+    background: #424242;
     border-radius: 2rem;
     text-align: center;
     transition: transform 1000ms ease-in-out;
@@ -387,7 +426,7 @@ section {
 
 #projects {
     width: auto;
-    height: 450px;
+    height: 650px;
     margin-top: 20px;
     margin-left: 0;
     margin-right: 0;
@@ -395,7 +434,7 @@ section {
 }
 
 .project-title {
-    margin-top: 3rem;
+    margin-top: 10rem;
     margin-right: 16rem;
     text-align: right;
     font-size: 2rem;    
@@ -410,7 +449,7 @@ section {
     margin: 10px;
     padding: 20px;
     width: 390px;
-    background: #5C8374;
+    background: #424242;
     border-radius: 2rem;
     text-align: center;
     transition: transform 1000ms ease-in-out;     
@@ -431,7 +470,7 @@ section {
     margin-left: 0;
     margin-right: 0;
     text-align: center;
-    background-color: #5C8374;
+    background-color: rgba(32, 32, 32, 0.3);
 }
 
 .achievement-title {
@@ -450,7 +489,7 @@ section {
     margin: 10px;
     padding: 25px;
     width: 390px;
-    background: #1B4242;
+    background: #424242;
     border-radius: 2rem;
     text-align: center; 
     transition: transform 1000ms ease-in-out;     
