--- a/style.css
+++ b/style.css
@@ -323,6 +323,52 @@ section {
     font-weight: 600;
 }
 
+/*Education*/
+
+#Education {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;    
+    width: auto;    
+    margin-left: 0;
+    margin-right: 0; 
+    margin-bottom: 10rem;
+}
+
+.edu-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;    
+    width: 85rem; 
+    gap: 15rem;
+    background: #424242;
+    border-radius: 2rem;
+    transition: transform 1000ms ease-in-out;
+}
+
+.edu-container:hover {
+    background-color: #092635;
+    transform: translatey(-15px);
+    box-shadow: 0px 5px 7px 1px rgba(0, 0, 0, 0.2);
+}
+
+.section-text-5 {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.section-text-6 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+}
+
+.edu-image {
+    height: 2rem;
+    width: 2rem;
+}
+
 /*Contact Section*/
 
 #contact {
@@ -405,14 +451,23 @@ section {
     display: flex;
     justify-content: center; 
 }
-  
+
+.programming-skills {
+    text-align: left;
+}
+
+.programming-skills span {
+    float: right;
+    margin-left: 10px;
+}
+
 .skill-container {
     margin: 10px;
     padding: 20px;
     width: 390px;
     background: #424242;
     border-radius: 2rem;
-    text-align: center;
+    text-align: left;
     transition: transform 1000ms ease-in-out;
 }
 
